# hostcall-example

./: README.md  exports.wit  imports.wit
host/: Cargo.toml  Makefile  module_A.wasm  module_B.wasm  module_net.wasm
host/src/: main.rs
module_A/: Makefile
module_A/src/: main.rs
module_B/: Cargo.toml
module_B/src/: main.rs
module_net/: Cargo.toml
module_net/src/: main.rs
